--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
     "minimum-stability": "stable",
     "require": {
         "pecee/simple-router": "4.3.6.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9"
     }
 }
