--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,10 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "pecee/simple-router": "4.3.6.*"
+        "coffeecode/router": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "9"
+        "phpunit/phpunit": "9",
+        "guzzlehttp/guzzle": "^7.0"
     }
 }
