--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     "require": {
         "coffeecode/router": "^1.0",
         "coffeecode/datalayer": "1.1.*",
-        "vlucas/phpdotenv": "^5.3.*"
+        "vlucas/phpdotenv": "5.3"
 
     },
     "require-dev": {
         "phpunit/phpunit": "9.*",
-        "guzzlehttp/guzzle": "^7.0.*"
+        "guzzlehttp/guzzle": "7"
     }
 }
